kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonali-intellect-demo
  labels:
    app.kubernetes.io/name: sonali-intellect-demo-cicd-gitops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonali-intellect-demo-cicd-gitops
  ports:
    - name: http
      port: 80
      targetPort: http
